--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       function parseText(text) {            
         if (text === "hello") {
           gameOutput.html("Hi there!");
+        } else if (text === "name?") {
+          "All powerful David Bot"
         }
       }
       
