--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         } else if (text==="name?") {
           gameOutput.html("All powerful pizza Bot")
         } else if (text === "robot come out!") {
-          gameOutput.html("h")️
+          gameOutput.html("s")️
         } 
       }
 
