--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       var gameInput = $("#bot-input");
       var gameOutput  = $("#bot-output");
       gameInput.keydown(function(keydownEvent) {  
-      }  // the key code for enter is 13
-                        if (keydownEvent.keyCode == 13) {      
-        parseText(gameInput.val()); 
-        gameInput.val(""); 
-      }  
+        // the key code for enter is 13
+        if (keydownEvent.keyCode == 13) {      
+           parseText(gameInput.val()); 
+          gameInput.val(""); 
+         }  
       })
 
       function parseText(text) {      
@@ -61,7 +61,7 @@
         }else if (text==="name?") {
           gameOutput.html("All powerful pizza Bot")
         } else if (text === "robot come out!") {
-          gameOutput.html("sdfsf")
+          gameOutput.html("🤖️🤖️")
         } 
       }
 
