--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           gameOutput.html("All powerful pizza Bot")
         } else if (text === "robot come out!") {
           gameOutput.html("🤖️🤖️")
-        } 
+        } else if (text ==="move") {
+          gameOutput
+        }
       }
 
       
