--- a/index.html
+++ b/index.html
@@ -50,25 +50,26 @@
     
     <script>
 
+
       var gameInput = $("#bot-input");
       var gameOutput  = $("#bot-output");
-      gameInput.keydown(function(keydownEvent) {  
+      gameInput.keydown(function(keydownEvent) { 
         // the key code for enter is 13
         if (keydownEvent.keyCode == 13) {      
-           parseText(gameInput.val()); 
-          gameInput.val(""); 
-         }  
-      })
+          parseText(gameInput.val()); 
+          gameInput.val("");   
+        }
+      }
 
-      function parseText(text) {      
+                        function parseText(text) {      
         if (text === "Good bye") {
           gameOutput.html("Bye!");
         }else if (text==="name?") {
           gameOutput.html("All powerful pizza Bot")
         } else if (text === "robot come out!") {
           gameOutput.html("🤖️🤖️")
-        } else if (text ==="move") {
-          gameOutput.animate({top: 500})
+        } else if (text==="move"){
+          gameOutput.animate({top:500}); 
         }
       }
 
